made sure can edit with git

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
 	<title>Personal Webpage</title>
 </head>
 <body>
 	<p>Alex Prascak</p>
+	<p>This is a test for GitHub Learning.</p>
 </body>
 </html>
