adjustments for mobile devices

--- a/index.html
+++ b/index.html
@@ -27,39 +27,41 @@
 		<div class="centered"><h1>Projects</h1></div>
 
 		<div class="row">
-			<div class="col-1"></div>
-			<div class="col-4 centered project">
+			<div class="col-md-1 col-xs-1"></div>
+			<div class="col-md-4 col-xs-10 centered project">
 				<h3>CL Twitter Script</h3>
 				<hr>
 				<div class="row">
-					<div class="col-6 project-desc">
+					<div class="col-md-6 col-xs-10 project-desc">
 						<p>Command line interface that integrates Python-Twitter API</p>
 						<p>Receives tweets, direct messages, mentions, and timeline</p>
 						<p>Posts tweets, retweets, and direct messages</p>
 					</div>
-					<div class="col-6">
+					<div class="col-md-6 col-xs-10">
 						<i class="fab fa-github-alt"></i>
 						<p class="project-date">Swamphacks 2019</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-2"></div>
-			<div class="col-4 centered project">
+			<div class="col-md-1 col-xs-1"></div>
+
+			<div class="col-md-1 col-xs-1"></div>
+			<div class="col-md-4 col-xs-10 centered project">
 				<h3>CS Course Requirements</h3>
 				<hr>
 				<div class="row">
-					<div class="col-6 project-desc">
+					<div class="col-md-6 project-desc">
 						<p>Command line interface that integrates Python-Twitter API</p>
 						<p>Receives tweets, direct messages, mentions, and timeline</p>
 						<p>Posts tweets, retweets, and direct messages</p>
 					</div>
-					<div class="col-6">
+					<div class="col-md-6">
 						<i class="fab fa-github-alt"></i>
 						<p class="project-date">February 2019</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-1"></div>
+			<div class="col-md-1 col-xs-1"></div>
 		</div>
 
 	</div>
@@ -67,8 +69,8 @@
 	<div class="container-fluid contact-block">
 
 		<div class="row">
-			<div class="col-1"></div>
-			<div class="col-4">
+			<div class="col-md-1 col-xs-1"></div>
+			<div class="col-md-4 col-xs-10">
 				<form id="contact" action="" method="post">
 					<h2>Contact Me</h2>
 					<fieldset>
@@ -88,14 +90,17 @@
 			    </fieldset>
 				</form>
 			</div>
-			<div class="col-2"></div>
-			<div class="col-4 info">
+			<div class="col-md-1 col-xs-1"></div>
+
+			<div class="col-md-1 col-xs-1"></div>
+			<div class="col-md-4 col-xs-10 info">
 				<h2>Info</h2>
 				<p>Email: aprascak@ufl.edu</p>
 				<p>Phone: (219) 575-8105</p>
 				<a href="Alex-Prascak-Resume.doc" download><p>Resume</p></a>
 			</div>
-			<div class="col-1"></div>
+			<div class="col-md-1 col-xs-1"></div>
+
 		</div>
 
 
